completed the backend code for apis. wrote api for creating and getting code, and verifying password. refactored frontend a little.

--- a/backend/void-url-shortner/src/main/resources/application.properties
+++ b/backend/void-url-shortner/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=void-url-shortner
 spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/shorturls}
+url-shortener.collision.retries=10
+url-shortener.expiration.hours=2
