--- a/frontend/void_url_shortner/pubspec.yaml
+++ b/frontend/void_url_shortner/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.7
   url_launcher: ^6.3.2
   google_fonts: ^6.3.0
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
