--- a/backend/void-url-shortner/src/main/resources/application.properties
+++ b/backend/void-url-shortner/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=void-url-shortner
 spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/shorturls}
 url-shortener.collision.retries=10
 url-shortener.expiration.hours=2
+
+spring.cache.type=redis
+spring.data.redis.host=${SPRING_CACHE_HOST:localhost}
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=${REDIS_TTL:60000}
