Added S3 service layer to the backend. Updated DTOs and changed caching logic.

--- a/backend/void-url-shortner/src/main/resources/application.properties
+++ b/backend/void-url-shortner/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.cache.type=redis
 spring.data.redis.host=${SPRING_CACHE_HOST:localhost}
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=${REDIS_TTL:60000}
+
+aws.s3.bucket=pulsar-void-url-shortner-bucket
+aws.region=ap-south-1
