--- a/backend/void-url-shortner/pom.xml
+++ b/backend/void-url-shortner/pom.xml
@@ -61,6 +61,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.32.25</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
