--- a/frontend/void_url_shortner/pubspec.yaml
+++ b/frontend/void_url_shortner/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_fonts: ^6.3.0
   toastification: ^3.0.3
   url_strategy: ^0.3.0
+  file_picker: ^10.3.1
+  universal_html: ^2.2.4
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
