Added credentials file path to docker compose for aws sdk. Remove unused imports from S3Configuration.

--- a/backend/void-url-shortner/docker-compose.yaml
+++ b/backend/void-url-shortner/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
     depends_on:
       - mongodb
       - redis
+    volumes:
+      - /home/tanmay/.aws:/root/.aws:ro
 
 volumes:
   mongo-data:
