--- a/frontend/void_url_shortner/pubspec.yaml
+++ b/frontend/void_url_shortner/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   file_picker: ^10.3.1
   universal_html: ^2.2.4
   mime: ^2.0.0
+  firebase_core: ^4.0.0
 
 dev_dependencies:
   flutter_test:
