--- a/backend/void-url-shortner/src/main/resources/application.properties
+++ b/backend/void-url-shortner/src/main/resources/application.properties
@@ -8,6 +8,5 @@ spring.data.redis.host=${SPRING_CACHE_HOST:localhost}
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=${REDIS_TTL:60000}
 
-aws.s3.bucket=pulsar-void-url-shortner-bucket
-aws.region=ap-south-1
-aws.credentials.profile-name=Personal-Project-User-Creds
+aws.s3.bucket=${AWS_S3_BUCKET_NAME}
+aws.region=${AWS_S3_REGION}
